parser/test_data/syntaxTests/nameAndTypeResolution/366_invalid_array_as_statement.sol
contract test {
    struct S { uint x; }
    constructor(uint K) { S[K]; }
}
// ----
// TypeError 3940: (69-70): Integer constant expected.
